--- a/styles/slyles.css
+++ b/styles/slyles.css
@@ -14,28 +14,19 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100%;
-  width: 100%;
 }
 .gallerybody {
   background-image: url(../img/gallery/bgi.jpg);
   background-size: 25% 25%;
   background-repeat: repeat;
 }
-.navli,
-.artnavli {
+.navli {
   display: inline;
   list-style: none;
   padding: 0 40px;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
-.artnavli {
-  font-size: 1.4em;
-}
-.navli {
-  font-size: 1.5em;
-}
-.headpage-list,
-.navli-item {
+.headpage-list {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -43,6 +34,10 @@ body {
   align-items: center;
 }
 .navli-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: auto;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 2rem;
   font-style: italic;
@@ -58,6 +53,7 @@ body {
 footer {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   max-width: 1280px;
   width: 100%;
   margin: 0 auto;
@@ -82,8 +78,7 @@ footer {
   right: 0;
   left: 0;
   bottom: 0;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   max-height: 100px;
   background-color: azure;
   opacity: 0.6;
@@ -96,16 +91,11 @@ footer {
   background-color: azure;
   opacity: 0.9;
 }
-.gallery-main-container,
 .contactpagecontainer {
   flex-direction: column;
 }
 .artpagecontainer {
   text-align: justify;
-}
-.contactpagecontainer,
-.registr-container {
-  align-items: center;
 }
 .catalogpieces {
   display: flex;
@@ -116,7 +106,7 @@ footer {
 }
 .section {
   width: 30%;
-  font-size: 1.5em;
+  font-size: 1.2em;
   padding: 10px;
   background-color: azure;
   opacity: 0.8;
@@ -158,6 +148,7 @@ h4,
 h5 {
   text-align: center;
   font-size: large;
+  width: 100%;
   padding: 20px 5px;
   height: 30px;
 }
@@ -176,6 +167,7 @@ a {
   display: flex;
   justify-content: center;
   max-width: 1240px;
+  width: 100%;
 }
 .firstletter::first-letter {
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -195,31 +187,23 @@ a {
   background-color: wheat;
   padding: 5px 10px 5px;
 }
-.contacts-map,
 .contacts-info {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  text-align: center;
+  font-size: 2em;
+  color: rgb(34, 18, 18);
   max-width: 500px;
   width: 100%;
   margin: 5px auto;
   padding: 10px 5px;
-}
-.contacts-info {
-  justify-content: center;
-}
-.contacts-info p,
-.contacts-map {
-  text-align: center;
-  font-size: 2em;
-  color: rgb(34, 18, 18);
 }
 figure {
   width: 250px;
   height: 250px;
   text-align: center;
   font-size: 1.1rem;
-  opacity: 0.9;
 }
 .figcomponent {
   outline: 3px solid green;
@@ -236,17 +220,16 @@ figcaption {
   height: 150px;
   margin: 20px auto;
 }
-
+.gallery-main-container {
+  background-color: azure;
+  height: 79%;
+  opacity: 0.9;
+}
 .gallery-container {
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
-  margin: 50px;
-}
-.gallery-main-container {
-  align-content: flex-start;
-  background-color: azure;
-  height: 78%;
-  opacity: 0.9;
+  width: 100%;
 }
 .page-nav-list {
   margin-left: 20px;
@@ -269,16 +252,15 @@ figcaption {
 .personinfo {
   display: inline;
 }
-
-.registrinfoparagraph {
-  text-align: center;
-  width: 90%;
+form {
+  max-width: 500px;
+  width: 100%;
 }
 fieldset {
-  max-width: 500px;
   margin: 25px auto;
   background-color: bisque;
 }
+textarea,
 select,
 input,
 .btn {
@@ -290,8 +272,6 @@ input[type="checkbox"] {
   width: auto;
 }
 textarea {
-  width: 100%;
-  padding: 10px 20px;
   resize: vertical;
   min-height: 75px;
   max-height: 33vh;
