--- a/styles/slyles.css
+++ b/styles/slyles.css
@@ -37,7 +37,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: auto;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 2rem;
   font-style: italic;
@@ -48,29 +47,30 @@ body {
   height: 150px;
   list-style: none;
 }
-.header-navbar,
-.container,
+main,.header-navbar,
 footer {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   max-width: 1280px;
   width: 100%;
+  justify-content: center;
   margin: 0 auto;
 }
-.footer,
-.container {
-  justify-content: center;
-  padding: 20px 5px;
-}
-.header-navbar {
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  align-content: space-around;
-  height: 100px;
+.header-navbar,
+footer{
   background-color: azure;
   opacity: 0.6;
+}
+main{
+  padding: 120px 5px;
+}
+.header-navbar {
+  position: absolute;
+  z-index: 2;
+  right: 0;
+  left: 0;
+  align-content: space-around;
+  height: 100px;  
 }
 footer {
   position: fixed;
@@ -80,18 +80,19 @@ footer {
   bottom: 0;
   font-size: 1.5rem;
   max-height: 100px;
-  background-color: azure;
-  opacity: 0.6;
+  padding: 20px 5px;
 }
 .contactpagecontainer,
 .artpagecontainer,
 .page-nav-container,
+.gallery-main,
 .registr-container {
-  padding-bottom: 50px;
+  padding-bottom: 100px 5px;
   background-color: azure;
   opacity: 0.9;
 }
 .contactpagecontainer {
+  display: flex;
   flex-direction: column;
 }
 .artpagecontainer {
@@ -99,12 +100,11 @@ footer {
 }
 .catalogpieces {
   display: flex;
-  flex-wrap: nowrap;
   justify-content: space-around;
   width: 85%;
   margin: 10px auto 70px;
 }
-.section {
+.catalog-section {
   width: 30%;
   font-size: 1.2em;
   padding: 10px;
@@ -220,20 +220,18 @@ figcaption {
   height: 150px;
   margin: 20px auto;
 }
-.gallery-main-container {
-  background-color: azure;
-  height: 79%;
-  opacity: 0.9;
-}
+.gallery-main{
+   height: 100%;
+  }
 .gallery-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
   width: 100%;
 }
 .page-nav-list {
   margin-left: 20px;
-  background-color: azure;
   width: 100%;
 }
 #sec1,
@@ -245,8 +243,6 @@ figcaption {
 .page-nav-article,
 .page-nav-articlespec {
   text-align: justify;
-  background-color: azure;
-  opacity: 0.9;
   padding: 10px 20px;
 }
 .personinfo {
@@ -279,6 +275,9 @@ textarea {
 legend {
   transform: translateY(-10px);
 }
-.form-group {
+form{
+  margin: 0 auto;
+}
+form div {
   margin: 15px 0 5px;
 }
